--- a/RiskSuite/Client/Shared/NavMenu.razor
+++ b/RiskSuite/Client/Shared/NavMenu.razor
@@ -13,7 +13,23 @@
                     </span>
                 </NavLink>
             </li>
+            <AuthorizeView>
+                <Authorized>
+                    <li class="nav-item dropdown p-0">
+                        <a class="nav-link dropdown-toggle" href="/admin" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Admin
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item text-dark" href="/admin/department">Departments</a>
+                            <a class="dropdown-item text-dark" href="/admin/account">Accounts</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item text-dark" href="/admin/logs">Logs</a>
+                        </div>
+                    </li>
+                </Authorized>
+            </AuthorizeView>
         </ul>
+
         <ul class="my-0 navbar-nav">
             <AuthorizeView>
                 <Authorized>
