--- a/RiskSuite/Client/Pages/CredRisk/Counterparty.razor
+++ b/RiskSuite/Client/Pages/CredRisk/Counterparty.razor
@@ -13,7 +13,7 @@
 <div class="m-2">
     <div class="d-flex">
         <div class="justify-content-start">
-            <a href="counterparty/create" class="btn btn-primary">Create</a>
+            <a href="counterparty/create" class="btn btn-sm btn-primary">Create</a>
         </div>
         <div class="mx-auto justify-content-center">
             <h3>Counterparties</h3>
