--- a/RiskSuite/Client/App.razor
+++ b/RiskSuite/Client/App.razor
@@ -1,20 +1,26 @@
-<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
-    <Found Context="routeData">
-        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
-            <Authorizing>
-                <p>Please wait, we are authorizing the user.</p>
-            </Authorizing>
-            <NotAuthorized>
-                <p>Not Authorized</p>
-                @*<HiddenVilla_Client.Pages.Authentication.RedirectToLogin></HiddenVilla_Client.Pages.Authentication.RedirectToLogin>*@
-            </NotAuthorized>
-        </AuthorizeRouteView>
-    </Found>
-    <NotFound>
-        <CascadingAuthenticationState>
+<CascadingAuthenticationState>
+    <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
+        <Found Context="routeData">
+            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+                <Authorizing>
+                    <div class="m-5">Please wait, we are authorizing the user.</div>
+                </Authorizing>
+                <NotAuthorized>
+                    <div class="m-5">Not Authorized</div>
+                    @*<HiddenVilla_Client.Pages.Authentication.RedirectToLogin></HiddenVilla_Client.Pages.Authentication.RedirectToLogin>*@
+                </NotAuthorized>
+            </AuthorizeRouteView>
+        </Found>
+        <NotFound>
+            @*<CascadingAuthenticationState>
+                    <LayoutView Layout="@typeof(MainLayout)">
+                        <p>Sorry, there's nothing at this address.</p>
+                    </LayoutView>
+                </CascadingAuthenticationState>*@
             <LayoutView Layout="@typeof(MainLayout)">
                 <p>Sorry, there's nothing at this address.</p>
             </LayoutView>
-        </CascadingAuthenticationState>
-    </NotFound>
-</Router>
+        </NotFound>
+    </Router>
+</CascadingAuthenticationState>
+
