counterparty detail init

--- a/RiskSuite/Client/Pages/References/CommitteeLimit.razor
+++ b/RiskSuite/Client/Pages/References/CommitteeLimit.razor
@@ -1,5 +1,5 @@
-﻿@page "/references/committeelimit"
-@page "/references/committeelimit/{Id:int}"
+﻿@page "/referencesx/committeelimit"
+@page "/referencesx/committeelimit/{Id:int}"
 
 <style>
     .sort-th {
@@ -10,6 +10,8 @@
         float: right;
     }
 </style>
+
+<LeftMenu></LeftMenu>
 
 <div class="row m-2">
     <div class="@(ShowDetail ? "col-6" : "col-12")">
