--- a/RiskSuite/Client/Shared/NavMenu.razor
+++ b/RiskSuite/Client/Shared/NavMenu.razor
@@ -13,21 +13,28 @@
                     </span>
                 </NavLink>
             </li>
-            <AuthorizeView Roles="@SD.Role_Admin">
+            <AuthorizeView Roles=@SD.Role_Admin>
                 <Authorized>
-                        <li class="nav-item dropdown p-0">
-                            <a class="nav-link dropdown-toggle" href="/admin" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Admin
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item text-dark" href="/admin/department">Departments</a>
-                                <a class="dropdown-item text-dark" href="/admin/account">Accounts</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item text-dark" href="/admin/logs">Logs</a>
-                            </div>
-                        </li>
+                    <li class="nav-item dropdown p-0">
+                        <a class="nav-link dropdown-toggle" href="/admin" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Admin
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item text-dark" href="/admin/department">Departments</a>
+                            <a class="dropdown-item text-dark" href="/admin/account">Accounts</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item text-dark" href="/admin/logs">Logs</a>
+                        </div>
+                    </li>
                 </Authorized>
             </AuthorizeView>
+            <li class="nav-item p-0">
+                <NavLink class="nav-link" href="/references">
+                    <span class="p-2">
+                        References
+                    </span>
+                </NavLink>
+            </li>
         </ul>
 
         <ul class="my-0 navbar-nav">
