--- a/RiskSuite/Client/Pages/DailyReview/DailyReviewCountry.razor
+++ b/RiskSuite/Client/Pages/DailyReview/DailyReviewCountry.razor
@@ -10,7 +10,7 @@
         <div class="card-text" style="font-size: small;">
             @if (isProcessing)
             {
-                <div style="position:fixed;top:50%;left:50%;margin-top:-50px;margin-left:-100px;">
+                <div style="position:relative;top:50%;left:50%;margin-top:-50px;margin-left:-100px;">
                     <img src="images/ajax-loader.gif" />
                 </div>
             }
