--- a/RiskSuite/Client/wwwroot/css/app.css
+++ b/RiskSuite/Client/wwwroot/css/app.css
@@ -126,14 +126,14 @@ a {
 
 .main {
     position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 250px;
+    top: 10px;
+    right: 10px;
+    bottom: 10px;
+    left: 260px;
     height: 100%;
-    overflow-y: auto;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+    /*overflow-y: auto;*/
+    /*padding-top: 0.5rem;*/
+    /*padding-bottom: 0.5rem;*/
 }
 
 .sort-th {
