--- a/RiskSuite/Client/Pages/DailyReview/DailyReviewCountryEdit.razor
+++ b/RiskSuite/Client/Pages/DailyReview/DailyReviewCountryEdit.razor
@@ -6,19 +6,19 @@
 		<ValidationMessage For="(()=>Model.DateReport)" />
 	</td>
 	<td>
-		<InputNumber @bind-Value="Model.RequstedValue" class="form-control form-control-sm" />
+		<InputText @bind-Value="Model.RequstedValueString" class="form-control form-control-sm" />
 		<ValidationMessage For="(()=>Model.RequstedValue)" />
 	</td>
 	<td>
-		<InputNumber @bind-Value="Model.AllocatedValue" class="form-control form-control-sm" />
+		<InputText @bind-Value="Model.AllocatedValueString" class="form-control form-control-sm" />
 		<ValidationMessage For="(()=>Model.AllocatedValue)" />
 	</td>
 	<td>
-		<InputNumber @bind-Value="Model.EstimatedValue" class="form-control form-control-sm" />
+		<InputText @bind-Value="Model.EstimatedValueString" class="form-control form-control-sm" />
 		<ValidationMessage For="(()=>Model.EstimatedValue)" />
 	</td>
 	<td>
-		<InputNumber @bind-Value="Model.FactValue" class="form-control form-control-sm" />
+		<InputText @bind-Value="Model.FactValueString" class="form-control form-control-sm" />
 		<ValidationMessage For="(()=>Model.FactValue)" />
 	</td>
 	<td>
