--- a/RiskSuite/Client/Pages/DailyReview/DailyReviewCountry.razor
+++ b/RiskSuite/Client/Pages/DailyReview/DailyReviewCountry.razor
@@ -7,7 +7,7 @@
             <div class="justify-content-end">
             </div>
         </div>
-        <div class="card-text" style="font-size: small;">
+        <div class="card-text scroll" style="font-size: small;">
             @if (isProcessing)
             {
                 <div style="position:relative;top:50%;left:50%;margin-top:-50px;margin-left:-100px;">
@@ -52,16 +52,61 @@
                                     else
                                     {
                                         <tr @onclick="() => OnSelectValue(val)">
-                                            <td>@val.DateReport.ToString("dd.MM.yy")</td>
-                                            <td>@val.RequstedValueString</td>
-                                            <td>@val.AllocatedValueString</td>
-                                            <td>@val.EstimatedValueString</td>
-                                            <td>@val.FactValueString</td>
+                                            <td>
+                                                @val.DateReport.ToString("dd.MM.yy")
+                                            </td>
+                                            <td>
+                                                <ValueWithLog Value="@val.RequstedValueString" Id="@val.RequestedValueTimeId" ShowInfo="ShowInfo" />
+                                            </td>
+                                            <td>
+                                                <div class="d-flex justify-content-between">
+                                                    <div class="">
+                                                        @val.AllocatedValueString
+                                                    </div>
+                                                    @if (val.AllocatedValueTimeId > 0)
+                                                    {
+                                                        <div class="pointer">
+                                                            <i class="fas fa-question-circle text-info" @onclick="() => ShowInfo(val.AllocatedValueTimeId)"></i>
+                                                        </div>
+                                                    }
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="d-flex justify-content-between">
+                                                    <div class="">
+                                                        @val.EstimatedValueString
+                                                    </div>
+                                                    @if (val.EstimatedValueTimeId > 0)
+                                                    {
+                                                        <div class="pointer">
+                                                        <i class="fas fa-question-circle text-info" @onclick="() => ShowInfo(val.EstimatedValueTimeId)"></i>
+                                                    </div>
+                                                    }
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="d-flex justify-content-between">
+                                                    <div class="">
+                                                        @val.FactValueString
+                                                    </div>
+                                                    <div class="pointer">
+                                                        <i class="fas fa-question-circle text-info" @onclick="() => ShowInfo(val.FactValueTimeId)"></i>
+                                                    </div>
+                                                </div>
+                                            </td>
                                             <td style="width: 50px;">
                                                 <button class="fas fa-edit text-primary p-0" style="background-color: transparent; border: 0;" type="button" tooltip="edit" @onclick="()=> Edit(val)" />
                                                 <button class="far fa-trash-alt text-danger p-0" style="background-color: transparent; border: 0;" type="button" tooltip="delete" @onclick="()=> Delete(val.Id)" />
                                             </td>
                                         </tr>
+                                        @if (EditMode == "log" && Model.Id == val.Id)
+                                        {
+                                            <tr>
+                                                <td colspan="6">
+                                                    @logText
+                                                </td>
+                                            </tr>
+                                        }
                                     }
 
                                 }
