--- a/RiskSuite/Client/Pages/DailyReview/DailyReview.razor
+++ b/RiskSuite/Client/Pages/DailyReview/DailyReview.razor
@@ -14,7 +14,7 @@
                 <div class="card-text" style="font-size: small;">
                     @if (gisProcessing)
                     {
-                        <div style="position:fixed;top:50%;left:50%;margin-top:-50px;margin-left:-100px;">
+                        <div style="position:relative;top:50%;left:50%;margin-top:-50px;margin-left:-100px;">
                             <img src="images/ajax-loader.gif" />
                         </div>
                     }
